@@ -1,7 +1,7 @@
 <ivysettings>
     <settings defaultResolver="local"/>
     <resolvers>
-        <chain name="local">     
+        <chain name="local" returnFirst="true">   
 			<filesystem name="default">
 				<ivy pattern="${user.home}/.ivy2/cache/[organisation]/[module]/ivys/ivy-[revision].xml"/>
         		<artifact pattern="${ivy.lib.dir}/[artifact](-[revision]).[ext]" />
@@ -9,7 +9,7 @@
             <url name="googlecode">
                 <artifact pattern="http://red5.googlecode.com/svn/repository/[artifact](-[revision]).[ext]" />
                 <artifact pattern="http://red5.googlecode.com/svn/repository/[organisation]/[artifact](-[revision]).[ext]" />
-            </url>    
+            </url>
         </chain>
     </resolvers>
 </ivysettings>
